# IoT-United

./: .gitignore  README.md
Functionality_Tests/: README.md
MiddleStation/MiddleStation-Zephyr/: CMakeLists.txt  MiddleStation-Zephyr.sln  MiddleStation-Zephyr.vgdbproj  prj.conf
MiddleStation/MiddleStation-Zephyr/.visualgdb/CodeDB/MiddleStation-Zephyr.vgdbproj-Debug-nrf5340dk_nrf5340_cpuapp/: GlobalFileTable.000  GlobalFileTable.001  arm_mpu.npa00  arm_mpu.npd  ble_comms-00001.npa00  ble_comms-00001.npd  ble_comms-00001.rdb  ble_comms.npa01  ble_comms.npd  ble_comms.rdb  codedb.lck  configs-00001.npa00  configs-00001.npd  configs.npa00  configs.npd  conn.npd  conn_queue-00001.npa00  conn_queue-00001.npd  conn_queue-00001.rdb  conn_queue.hpa00  conn_queue.hpd  conn_queue.npa00  conn_queue.npd  conn_queue.rdb  device_record-00001.npa00  device_record-00001.npd  device_record-00001.rdb  device_record.npa01  device_record.npd  device_record.rdb  fatal-00001.rdb  fault.rdb  gatt.npd  gatt_dm-00001.npa00  gatt_dm-00001.npd  gatt_dm-00001.rdb  hci_core.npd  isr_tables-00001.npa00  isr_tables-00001.npd  isr_tables-00002.npa00  (+58 more)
MiddleStation/MiddleStation-Zephyr/.visualgdb/VisualGDBCache/MiddleStation-Zephyr-Debug-nrf5340dk_nrf5340_cpuapp/: ImplicitCompilerFlags.xml  UpToDateChecklist.db
MiddleStation/MiddleStation-Zephyr/core/: ble_comms.c  ble_comms.h  conn_queue.c  conn_queue.h  device_record.c  device_record.h  main.c  main.h
MiddleStation/MiddleStation-Zephyr/src/: ble_comms.c  ble_comms.h  conn_queue.c  conn_queue.h  device_record.c  device_record.h  main.c  main.h
(+621 files in other folders)
